--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Jacob Rada</title>
+        <title>Chomskyy's </title>
 
         <meta charset="UTF-8">
 
@@ -25,12 +25,8 @@
         <div class="main">
             <div class="section" id="name">
                 <div class="section-left">
-                    <span class="firstname">
-                        jacob
-                    </span>
-                    </br>
                     <span class="lastname">
-                        RADA
+                        Chomskyy
                     </span>
                 </div>
                 <div class="section-right">
@@ -43,40 +39,130 @@
                 </div>
                 <div class="section-right">
                     <p>
-                        Hello! My name is Jacob. Welcome to my website. I don't know for sure what I
-                        I want to do with this website. Come back some day, maybe there will be something cool.
+                        Hello! Currently, this website is only ready for Minecraft so if you're
+                        here for that, good. If not, what are you doing here.
                     </p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="section-left">
-                    Resume
+                    Minecraft Version:
                 </div>
                 <div class="section-right">
-                    View my resume: <a href="./resume.html">[html]</a> <a href="./resume.pdf">[pdf]</a>
+                    1.20.1
                 </div>
             </div>
 
             <div class="section">
                 <div class="section-left">
-                    Stuff I'm Working On
+                    Fabric Version:
                 </div>
                 <div class="section-right">
-                    Nothing at the moment.. Stay tuned!
+                    0.16.5
                 </div>
             </div>
 
             <div class="section">
                 <div class="section-left">
-                    Links
+                    IP Address:
                 </div>
                 <div class="section-right">
-                    <a href="https://github.com/jacobrada">GitHub</a>
-                    <a href="https://www.linkedin.com/in/jacob-rada-18b00121b/">LinkedIn</a>
-                    <a href="https://www.facebook.com/moltencheez">Facebook</a>
+                    34.152.30.163
                 </div>
             </div>
+
+            <div class="section">
+                <div class="section-left">
+                    Instructions (Modrinth)
+                </div>
+                <div class="section-right">
+                    This is my preferred mod launcher. You don't have to use it but i recommend.
+                    <br>
+                    1) Install Modrinth mod launcher if you haven't already.
+                    <br>
+                    2) Log in n stuff
+                    <br>
+                    3) Download <a href="https://drive.google.com/drive/folders/1C2Am3uNP3s4ocoSxONJdp5y-aJZMIpsP">BBB24.mrpack</a>
+                    <br>
+                    4) On Modrinth, click the green + button in the bottom left to create an instance.
+                    Then, click From File and select BBB24.mrpack
+                    <br>
+                    5) Run game
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-left">
+                    Instructions (CurseForge)
+                </div>
+                <div class="section-right">
+                    ewww bloatware
+                    <br>
+                    1) Install CurseForge
+                    <br>
+                    2) Log in n stuff
+                    <br>
+                    3) Download <a href="https://drive.google.com/drive/folders/1C2Am3uNP3s4ocoSxONJdp5y-aJZMIpsP">BBB24CurseForge.zip</a> from the drive link below
+                    <br>
+                    4) Press Import under My Modpacks tab for Minecraft and selcct BBB24CurseForge.zip
+                    <br>
+                    5) Run game
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-left">
+                    Instructions (Manual)
+                </div>
+                <div class="section-right">
+                    This is for if u dont wanna get a mod launcher
+                    <br>
+                    1) Install Minecraft
+                    <br>
+                    2) Download and run Fabric installer from <a href="https://fabricmc.net/use/installer/">the official Fabric launcher</a>.
+                    <br>
+                    3) Set Minecraft Version and Fabric Version to the versions listed above. Leave everything else.
+                    <br>
+                    4) A new profile should be created in your minecraft launcher
+                    <br>
+                    5) Download <a href="https://drive.google.com/drive/folders/1C2Am3uNP3s4ocoSxONJdp5y-aJZMIpsP">allmods.zip</a> from the drive link below
+                    <br>
+                    6) Type in %AppData%/.minecraft in the file explorer bar
+                    <br>
+                    7) If there is no mods folder, run the fabric mod profile and close it when you get to title screen
+                    <br>
+                    8) Move the mod .jar files from the bbb24mods.zip into the mods folder
+                    <br>
+                    9) Run modded profile
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-left">
+                    Allocating more RAM
+                </div>
+                <div class="section-right">
+                    Make your Minecraft beefier!
+                    <br>
+                    Instructions to come... for now just google it.
+                    <br>
+                    For things to run smoothly it's recommended to run Modded Minecraft with 4GB of RAM.
+                    You could get away with the default (2GB) but if you're having performance issues try allocating more RAM.
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-left">
+                    Contact
+                </div>
+                <div class="section-right">
+                    Questions? Add me on Discord! username:chomskyy
+                    <br>
+                    Instructions to come... for now just google it.
+                </div>
+            </div>
+
         </div>
     </body>
 
